added order details sql repo